# Compiler

./: CMakeLists.txt  CMakePresets.json  lexer.l  main.cpp
docker/: Dockerfile  install_deps.sh  run_docker.sh
inc/: lexer.hpp  parser.hpp  tokens.hpp  utility.hpp
input/: 1.in  a.in
scripts/: build.sh  run.sh
